--- a/style.css
+++ b/style.css
@@ -79,10 +79,6 @@ a:focus {
   border-bottom: 3px solid;
 }
 
-/* Home Section */
-.title-group {
-  text-align: center;
-}
 
 /* About Section */
 .about-container {
@@ -316,7 +312,50 @@ input:checked + .slider::before {
   }
 }
 
-/* Jeju Cafe Introduction Section */
+/* Home Section */
+.title-group {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 60em;
+}
+
+/* Jeju Intro Section */
+.intro-content {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.intro-content .intro-textbox {
+  max-width: 600px;
+}
+.intro-content .intro-textbox a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 20px;
+  background-color: var(--on-background);
+  color: var(--on-primary);
+  border-radius: 40px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-bottom: none;
+}
+
+.intro-content .intro-imgBox {
+  margin-top: 30px;
+}
+
+.intro-content .intro-imgBox img {
+  width: 500px;
+  border-radius: 8px;
+  box-shadow: 5px 10px 20px var(--on-background);
+}
+
+
+/* Jeju Cafe Top 3 Section */
 
 .content {
   width: 100%;
@@ -376,9 +415,13 @@ input:checked + .slider::before {
 }
 
 /* Cover JeJu Cafe Animation */
+#title {
+  background-image: url("./img/jejuisland.jpeg");
+}
 
 .cover {
   font-size: 9em;
+  color:white;
 }
 
 .cover span {
